# cspeak-framework

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  bot.cpp
include/: cspeak.h
src/: cspeak.cpp
